[oc] update from Pootle (firefox)

--- a/browser/chrome/browser/browser.properties
+++ b/browser/chrome/browser/browser.properties
@@ -159,7 +159,7 @@ pluginContinue.label=Daissar activat
 pluginContinue.accesskey=C
 
 # in-page UI
-PluginClickToActivate=C
+PluginClickToActivate=Activar %S.
 PluginVulnerableUpdatable=Aqueste plugin es vulnerable e deu èsser mes a jorn.
 PluginVulnerableNoUpdate=Aqueste plugin possedís de falhas de seguretat.
 
@@ -197,7 +197,7 @@ update.downloadAndInstallButton.label=Metre a jorn %S
 update.downloadAndInstallButton.accesskey=U
 
 # RSS Pretty Print
-feedShowFeedNew=u
+feedShowFeedNew=S'abonar a « %S »…
 
 menuOpenAllInTabs.label=Tot dobrir dins d'onglets
 
@@ -215,7 +215,7 @@ menuRestoreAllWindowsSubview.label=Restablir las fenèstras tampadas
 # LOCALIZATION NOTE (menuUndoCloseWindowLabel): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 Window Title, #2 Number of tabs
-menuUndoCloseWindowLabel=Restablir totas las fenèstras
+menuUndoCloseWindowLabel=#1 (e #2 autre onglet);#1 (e #2 autres onglets)
 menuUndoCloseWindowSingleTabLabel=#1
 
 # Unified Back-/Forward Popup
@@ -269,7 +269,7 @@ offlineApps.manageUsageAccessKey=V
 
 # LOCALIZATION NOTE (indexedDB.usage): %1$S is the website host name
 # %2$S a number of megabytes.
-indexedDB.usage=p
+indexedDB.usage=Aqueste site (%1$S) ensaja d'emmagazinar mai de %2$S Mo de donadas sus vòstre ordenador per una utilizacion fòra connexion.
 
 identity.identified.verifier=Verificat per : %S
 identity.identified.verified_by_you=Avètz apondut una excepcion de seguretat per aqueste site
@@ -301,7 +301,7 @@ editBookmarkPanel.editBookmarkTitle=Modificar aqueste marcapaginas
 editBookmark.removeBookmarks.label=Suprimir lo marcapaginas;Suprimir los #1 marcapaginas
 
 # Post Update Notifications
-pu.notifyButton.label=Suprimir lo marcapaginas;Suprimir los #1 marcapaginas
+pu.notifyButton.label=Detalhs…
 pu.notifyButton.accesskey=D
 # LOCALIZATION NOTE %S will be replaced by the short name of the application.
 puNotifyText=%S es estat mes a jorn
@@ -360,7 +360,7 @@ safebrowsing.notAnAttackButton.accessKey=a
 # LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=C
+ctrlTab.showAll.label=;Afichar los #1 onglets
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
@@ -409,7 +409,7 @@ syncPromoNotification.learnMoreLinkText=Ne saber mai
 # the add-on install complete panel when Sync isn't set.
 # %S will be replaced by syncBrandShortName.
 # The final space separates this text from the Learn More link.
-syncPromoNotification.addons.description=Ne saber mai
+syncPromoNotification.addons.description=Podètz accedir a vòstres moduls complementaris sus totes vòstres aparelhs gràcias a %S. 
 # LOCALIZATION NOTE (syncPromoNotification.addons-sync-disabled.label):
 # This appears in the add-on install complete panel when Sync is set
 # but addons sync is not. %S will be replaced by syncBrandShortName.
@@ -441,7 +441,7 @@ service.toolbarbutton.label=Servicis
 service.toolbarbutton.tooltiptext=Servicis
 
 # LOCALIZATION NOTE (social.install.description): %1$S is the hostname of the social provider, %2$S is brandShortName (e.g. Firefox)
-service.install.description=Servicis
+service.install.description=Volètz activar los servicis de %1$S per un afichatge dins la barra d'aisinas e lo panèl lateral de %2$S ?
 service.install.ok.label=Activar los servicis
 service.install.ok.accesskey=E
 service.install.learnmore=Ne saber mai…
