--- a/browser/chrome/browser/devtools/appcacheutils.properties
+++ b/browser/chrome/browser/devtools/appcacheutils.properties
@@ -29,30 +29,30 @@ badMimeType=Lo manifèste possedís un tipe MIME %S. Lo tipe MIME dels manifèst
 # LOCALIZATION NOTE (duplicateURI): the associated cache manifest references
 # the same URI from multiple locations. Parameters: %1$S is the URI, %2$S is a
 # list of references to this URI.
-duplicateURI=L'URI %S es referenciat a d'endreches multiples. Aquò es pas autorizat : %S.
+duplicateURI=L'URI %1$S es referenciat a d'endreches multiples. Aquò es pas autorizat : %2$S.
 
 # LOCALIZATION NOTE (networkBlocksURI, fallbackBlocksURI): the associated
 # cache manifest references the same URI in the NETWORK (or FALLBACK) section
 # as it does in other sections. Parameters: %1$S is the line number, %2$S is
 # the resource name, %3$S is the line number, %4$S is the resource name, %5$S
 # is the section name.
-networkBlocksURI=La linha %S (%S) de la seccion NETWORK empacha la mesa en escondedor de la linha %S (%S) dins la seccion %S.
-fallbackBlocksURI=La linha %S (%S) de la seccion FALLBACK empacha la mesa en enscondedor de la linha %S (%S) dins la seccion %S.
+networkBlocksURI=La linha %1$S (%2$S) de la seccion NETWORK empacha la mesa en escondedor de la linha %3$S (%4$S) dins la seccion %5$S .
+fallbackBlocksURI=La linha %1$S (%2$S) de la seccion FALLBACK empacha la mesa en enscondedor de la linha  %3$S (%4$S) dins la seccion %5$S.
 
 # LOCALIZATION NOTE (fileChangedButNotManifest): the associated cache manifest
 # references a URI that has a file modified after the cache manifest.
 # Parameters: %1$S is the resource name, %2$S is the cache manifest, %3$S is
 # the line number.
-fileChangedButNotManifest=Lo fichièr %S es estat modificat aprèp %S. Levat se lo tèxte del fichièr manifèste es modificat, la version en escondedor serà utilizada a la plaça a la linha %S.
+fileChangedButNotManifest=Lo fichièr %1$S es estat modificat aprèp %2$S. Levat se lo tèxte del fichièr manifèste es modificat, la version en escondedor serà utilizada a la plaça a la linha  %3$S.
 
 # LOCALIZATION NOTE (cacheControlNoStore): the specified page has a header
 # preventing caching or storing information. Parameters: %1$S is the resource
 # name, %2$S is the line number.
-cacheControlNoStore=%S possedís l'entèsta cache-control amb per valor no-store. Aquò empacharà l'escondedor d'aplicacion d'emmagazinar lo fichièr a la linha %S.
+cacheControlNoStore=%1$S possedís l'entèsta cache-control amb per valor no-store. Aquò empacharà l'escondedor d'aplicacion d'emmagazinar lo fichièr a la linha %2$S.
 
 # LOCALIZATION NOTE (notAvailable): the specified resource is not available.
 # Parameters: %1$S is the resource name, %2$S is the line number.
-notAvailable=%S punta cap a una ressorsa indisponibla a la linha %S.
+notAvailable=%1$S punta cap a una ressorsa indisponibla a la linha %2$S.
 
 # LOCALIZATION NOTE (invalidURI): it's used when an invalid URI is passed to
 # the appcache.
