--- a/browser/chrome/browser/devtools/gcli.properties
+++ b/browser/chrome/browser/devtools/gcli.properties
@@ -227,6 +227,7 @@ connectReply=%S comanda(s) aponduda(s).
 # disconnectForceDesc): These strings describe the 'disconnect' command and
 # all its available parameters. See localization comment for 'connect' for an
 # explanation about 'prefix'.
+disconnectDesc2=Se desconnectar del servidor
 disconnectManual2=Se desconnectar del servidor actualament utilizat per l'execucion de comandas distantas
 disconnectPrefixDesc=Lo prefix parent per las comandas importadas
 disconnectForceDesc=Ignorar las requèstas en cors
