--- a/browser/chrome/browser/devtools/gclicommands.properties
+++ b/browser/chrome/browser/devtools/gclicommands.properties
@@ -471,6 +471,7 @@ dbgUnBlackBoxErrorDesc=Error de levament de la bóstia negra :
 
 # LOCALIZATION NOTE (dbgUnBlackBoxInvertDesc) A very short string used to describe the
 # 'invert' parameter to the 'dbg unblackbox' command.
+dbgUnBlackBoxInvertDesc=Inversar las correspondéncias. Seràn plaçadas dins de bóstias negras totas las fonts que son pas ni la font provesida, ni las fonts que correspondon al modèl provesit.
 
 # LOCALIZATION NOTE (consolecloseDesc) A very short description of the
 # 'console close' command. This string is designed to be shown in a menu
@@ -564,14 +565,17 @@ cmdRefreshDesc=Tornar legir lo dorsièr mozcmd
 # LOCALIZATION NOTE (cmdStatus) When the we load new commands from mozcmd
 # directory, we report on how many we loaded. %1$S is a count of the number
 # of loaded commands, and %2$S is the directory we loaded from.
+cmdStatus=Legir las comandas %1$S dempuèi « %2$S »
 
 # LOCALIZATION NOTE (cmdSetdirDesc) 
 cmdSetdirDesc=Tornar legir lo dorsièr mozcmd
 
 # LOCALIZATION NOTE (cmdSetdirManual) 
+cmdSetdirManual=Un dorsièr « mozcmd » permet de crear aisidament de comandas personalizadas per la linha de comanda de Firefox. Per mai d'informacions, consultatz la <a href="https://developer.mozilla.org/en-US/docs/Tools/GCLI/Customization">documentacion MDN</a>.
 
 # LOCALIZATION NOTE (cmdSetdirDirectoryDesc) The description of the directory
 # parameter to the 'cmd setdir' command.
+cmdSetdirDirectoryDesc=Dorsièr que conten de fichièrs .mozcmd
 
 # LOCALIZATION NOTE (addonDesc) A very short description of the 'addon'
 # command. This string is designed to be shown in a menu alongside the command
@@ -1225,9 +1229,11 @@ appCacheClearCleared=Entradas escafadas amb succès.
 
 # LOCALIZATION NOTE (AppCacheListDesc) A very short string used to describe
 # the function of the "appcache list" command.
+appCacheListDesc=Afichar una lista de las entradas de l'escondedor d'aplicacion
 
 # LOCALIZATION NOTE (AppCacheListManual) A fuller description of the
 # 'appcache list' command, displayed when the user asks for help on what it does.
+appCacheListManual=Afichar la lista completa de las entradas de l'escondedor d'aplicacion. Se lo paramètre de recèrca es utilizat, lo tablèu aficharà las entradas que contenon lo tèrme recercat.
 
 # LOCALIZATION NOTE (AppCacheListSearchDesc) A very short string used to describe
 # the function of the "search" parameter of the appcache list" command.
@@ -1253,6 +1259,7 @@ appCacheViewEntryDesc=Dobrir un novèl onglet que conten las informacions de l'e
 # LOCALIZATION NOTE (appCacheViewEntryManual) A fuller description of the
 # 'appcache viewentry' command, displayed when the user asks for help on what it
 # does.
+appCacheViewEntryManual=Dobrir un novèl onglet que conten las informacions de l'entrada d'escondedor especificada.
 
 # LOCALIZATION NOTE (appCacheViewEntryKey) A very short string used to describe
 # the function of the "key" parameter of the 'appcache viewentry' command.
@@ -1293,9 +1300,11 @@ profilerStopManual=Nom d'un perfil que volètz arrestar.
 
 # LOCALIZATION NOTE (profilerList) A very short string used to describe the function
 # of the profiler list command.
+profilerListDesc=Far la lista de totes los perfils
 
 # LOCALIZATION NOTE (profilerShow) A very short string used to describe the function
 # of the profiler show command.
+profilerShowDesc=Afichar un perfil particular
 
 # LOCALIZATION NOTE (profilerShowManual) A fuller description of the 'profile name'
 # parameter. This parameter is used to name a newly created profile or to lookup
@@ -1305,6 +1314,7 @@ profilerShowManual=Nom del perfil.
 # LOCALIZATION NOTE (profilerAlreadyStarted) A message that is displayed whenever
 # an operation cannot be completed because the profile in question has already
 # been started.
+profilerAlreadyStarted2=Aqueste perfil es ja estat aviat
 
 # LOCALIZATION NOTE (profilerNotFound) A message that is displayed whenever
 # an operation cannot be completed because the profile in question could not be
@@ -1315,9 +1325,11 @@ profilerNotFound=Perfil pas trobat
 # an operation cannot be completed because the profile in question has not been
 # started yet. It also contains a hint to use the 'profile start' command to
 # start the profiler.
+profilerNotStarted3=Aqueste perfil es pas encara estat aviat. Utilizatz « profile start » per aviar lo perfilatge
 
 # LOCALIZATION NOTE (profilerStarted2) A very short string that indicates that
 # we have started recording.
+profilerStarted2=Enregistrament...
 
 # LOCALIZATION NOTE (profilerStopped) A very short string that indicates that
 # we have stopped recording.
@@ -1325,12 +1337,15 @@ profilerStopped=Arrestat...
 
 # LOCALIZATION NOTE (profilerNotReady) A message that is displayed whenever
 # an operation cannot be completed because the profiler has not been opened yet.
+profilerNotReady=Per qu'aquesta comanda fonciona, d'en primièr, vos cal dobrir lo perfilador
 
 # LOCALIZATION NOTE (listenDesc) A very short string used to describe the
 # function of the 'listen' command.
+listenDesc=Dobrir un pòrt de desbugatge distant
 
 # LOCALIZATION NOTE (listenManual2) A longer description of the 'listen'
 # command.
+listenManual2=%1$S pòt autorizar lo desbugatge distant per una connexion TCP/IP. Per de rasons de seguretat, aquesta foncionalitat es desactivada per defaut, mas pòt èsser activada amb l'ajuda d'aquesta comanda.
 
 # LOCALIZATION NOTE (listenPortDesc) A very short string used to describe the
 # function of 'port' parameter to the 'listen' command.
@@ -1353,6 +1368,7 @@ listenNoInitOutput=DebuggerServer es pas inicializat
 # the 'media' commands and all available parameters.
 mediaDesc=Emulacion de tipes de mèdias CSS
 mediaEmulateDesc=Emular un tipe de mèdia CSS en particular
+mediaEmulateManual=Veire lo document coma se èra afichat sus un aparelh que pren en carga lo tipe de mèdia en question e en li aplicant las règlas CSS adeqüatas.
 mediaEmulateType=Lo tipe de mèdia d'emular
 mediaResetDesc=Arrestar l'emulacion d'un tipe de mèdia CSS
 mediaResetManual=Arrestar l'emulacion d'un tipe de mèdia CSS
