--- a/browser/chrome/browser/devtools/inspector.properties
+++ b/browser/chrome/browser/devtools/inspector.properties
@@ -45,3 +45,4 @@ markupView.more.showAll=Afichar totes los nosèls %S
 inspector.tooltip=Inspector d'estils e del DOM
 
 #LOCALIZATION NOTE: Used in the image preview tooltip when the image could not be loaded
+previewTooltip.image.brokenImage=Impossible de cargar l'imatge
