--- a/browser/chrome/browser/devtools/styleeditor.properties
+++ b/browser/chrome/browser/devtools/styleeditor.properties
@@ -92,6 +92,7 @@ ToolboxStyleEditor.tooltip2=Editor de fuèlh d'estil (CSS)
 
 # LOCALIZATION NOTE (confirmNavigationAway): Shown in a notification box when
 # the user tries to navigate away from a web page.
+confirmNavigationAway.message=Se quitatz aquesta pagina, las modificacions pas enregistradas de l'editor d'estil seràn perdudas.
 confirmNavigationAway.buttonLeave=Quitar la pagina
 confirmNavigationAway.buttonLeaveAccesskey=L
 confirmNavigationAway.buttonStay=Demorar sus la pagina
