--- a/browser/chrome/browser/devtools/toolbox.properties
+++ b/browser/chrome/browser/devtools/toolbox.properties
@@ -57,3 +57,4 @@ browserConsoleCmd.commandkey=VK_F4
 
 # LOCALIZATION NOTE (pickButton.tooltip)
 # This is the tooltip of the pick button in the toolbox toolbar
+pickButton.tooltip=Seleccionar un element de la pagina
