--- a/browser/chrome/browser/devtools/webconsole.properties
+++ b/browser/chrome/browser/devtools/webconsole.properties
@@ -96,6 +96,9 @@ gcliterm.instanceLabel=Instància de %S
 # reflow: 12ms function foobar, file.js line 42
 # The 2nd line, from "function" to the end of the line, is a link to the
 # JavaScript debugger.
+reflow.messageWithNoLink=reflow: %Sms
+reflow.messageWithLink=reflow: %Sms 
+reflow.messageLinkText=foncion %1$S, %2$S linha %3$S
 
 # LOCALIZATION NOTE (stacktrace.anonymousFunction): this string is used to
 # display JavaScript functions that have no given name - they are said to be
@@ -199,3 +202,4 @@ propertiesFilterPlaceholder=Proprietats del filtre
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of message repeats
 # example: 3 repeats
+messageRepeats.tooltip2=Repetit #1 còp;Repetit #1 còps
