--- a/browser/chrome/browser/places/places.properties
+++ b/browser/chrome/browser/places/places.properties
@@ -30,13 +30,23 @@ sortByNameGeneric=Triar per nom
 # change must be annotated here.  Both label and accesskey must be updated.
 # - version 1: changed view.sortBy.1.date.
 view.sortBy.1.name.label=Triar per nom
+view.sortBy.1.name.accesskey=N
 view.sortBy.1.url.label=Triar per emplaçament
+view.sortBy.1.url.accesskey=L
+view.sortBy.1.date.label=Triat dempuèi la darrièra visita
+view.sortBy.1.date.accesskey=V
 view.sortBy.1.visitCount.label=Triar per nombre de visitas
+view.sortBy.1.visitCount.accesskey=C
 view.sortBy.1.keyword.label=Triar per mot clau
+view.sortBy.1.keyword.accesskey=K
 view.sortBy.1.description.label=Triar per descripcion
+view.sortBy.1.description.accesskey=D
 view.sortBy.1.dateAdded.label=Triada per data d'apondon
+view.sortBy.1.dateAdded.accesskey=e
 view.sortBy.1.lastModified.label=Triar per data de darrièra modificacion
+view.sortBy.1.lastModified.accesskey=M
 view.sortBy.1.tags.label=Triar per balisas
+view.sortBy.1.tags.accesskey=T
 
 searchBookmarks=Recercar dins los marcapaginas
 searchHistory=Recercar dins l'istoric
