--- a/browser/chrome/browser/sitePermissions.properties
+++ b/browser/chrome/browser/sitePermissions.properties
@@ -12,6 +12,8 @@ permission.desktop-notification.label = Utilizar las notificacions
 permission.image.label = Cargar los imatges
 permission.install.label = Installacion de modul
 permission.popup.label = Dobrir de fenèstras sorgissentas
+permission.geo.label = Accedir a vòstra posicion
 permission.indexedDB.label = Conservar de donadas fòra connexion
 permission.fullscreen.label = Passar en mòde ecran complet
+permission.pointerLock.label = Amagar lo puntador de la mirga
 
