--- a/browser/metro/chrome/browser.properties
+++ b/browser/metro/chrome/browser.properties
@@ -16,26 +16,37 @@ browser.search.contextTextSearchLabel2=Recèrca %S per « %S »
 
 # Contextual Appbar - Button Labels
 
+contextAppbar2.pin.topSites=Espingolar sus Los mai visitats
+contextAppbar2.pin.bookmarks=Espingolar sus Marcapaginas
+contextAppbar2.pin.recentHistory=Voidar l'istoric recent
+contextAppbar2.pin.downloads=Espingolar sus Telecargaments
 
+contextAppbar2.unpin.topSites=Daissar anar de Los mai visitats
 contextAppbar2.hide.bookmarks=Marcapaginas dinamics
 contextAppbar2.hide.recentHistory=Amagar
+contextAppbar2.unpin.downloads=Daissar anar de Telecargaments
 
 # LOCALIZATION NOTE (contextAppbar2.delete): Deletes selected pages.
 contextAppbar2.delete=Escafar
 
 # LOCALIZATION NOTE (contextAppbar2.restore): Undoes a previous deletion.
 # Button with this label only appears immediately after a deletion.
+contextAppbar2.restore=Anullar la supression
 
 # LOCALIZATION NOTE (contextAppbar2.clear): Unselects pages without modification.
+contextAppbar2.clear=Anullar la seleccion
 
 # Clear private data
 clearPrivateData.clearButton=Netejar
+clearPrivateData.title2=Escafar mas traças
 # LOCALIZATION NOTE (clearPrivateData.message2): #1 is optionsCharm
+clearPrivateData.message2=Las donadas personalas seleccionadas dins #1 seràn escafadas definitivament.
 
 # Settings Charms
 aboutCharm1=A prepaus
 optionsCharm=Opcions
 searchCharm=Recercar
+helpOnlineCharm=Ajuda (en linha)
 
 # General
 # LOCALIZATION NOTE (browserForSaveLocation): Title for the "Save..." file picker dialog
@@ -49,29 +60,45 @@ downloadOpen=Dobrir
 downloadSave=Enregistrar
 downloadCancel=Anullar
 downloadTryAgain=Ensajatz tornarmai
+downloadOpenNow=Dobrir ara
 # LOCALIZATION NOTE (downloadShowInFiles): 'Files' refers to the Windows 8 file explorer
 downloadShowInFiles=Afichar dins los fichièrs
 
 # Alerts
+alertLinkBookmarked=Marcapagina apondut
 alertDownloads=Telecargaments
 alertDownloadsStart=Telecargament : %S
+alertDownloadsDone=%S a acabat lo telecargament
 # LOCALIZATION NOTE (alertDownloadsStart2): Used in a notification bar for download progress
 # #1 is the file name, #2 is the amount downloaded so far / total amount to download, and #3 is seconds remaining.
+alertDownloadsStart2=Telecargament de #1, #2, #3
+alertDownloadsDone2=%S es estat telecargat
+alertTapToSave=Quichar per enregistrar aqueste fichièr.
+alertDownloadsSize=Telecargament tròp voluminós
+alertDownloadsNoSpace=Espaci d'emmagazinatge insufisent
 # LOCALIZATION NOTE (alertDownloadSave2): #1 is the file name, #2 is the file size, #3 is the file host
+alertDownloadSave2=Volètz dobrir o enregistrar #1 (#2) dempuèi #3 ?
 # LOCALIZATION NOTE (alertDownloadMultiple): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of files, #2 is (amount downloaded so far / total amount to download) and #3 is seconds remaining
+alertDownloadMultiple=Telecargament d&#39;un fichièr, #2, #3;Telecargament de #1 fichièrs, #2, #3
 # LOCALIZATION NOTE (alertMultipleDownloadsComplete): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of downloads completed
+alertMultipleDownloadsComplete=Un telecargament acabat;#1 telecargaments acabats
+alertDownloadFailed=O planhèm, lo telecargament de %S a fracassat.
 
 # Popup Blocker
 # LOCALIZATION NOTE (popupWarning.message): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
 popupWarning.message=#1 a empachat aqueste site de dobrir una fenèstra popup.;#1 a empachat aqueste site de dobrir #2 fenèstras popup.
+popupButtonAllowOnce2=Autorizar un còp
+popupButtonAlwaysAllow3=Autorizar totjorn
+popupButtonNeverWarn3=Autorizar pas jamai
 
 # ContentPermissionsPrompt
+contentPermissions.alwaysForSite=Totjorn per aqueste site
 contentPermissions.neverForSite=Pas jamai per aqueste site
 
 # Geolocation UI
@@ -81,6 +108,7 @@ geolocation2.allow=Partejar l'emplaçament
 
 # LOCALIZATION NOTE (geolocation2.wantsTo offlineApps.wantsTo indexedDBQuota.wantsTo):
 # %S is the domain name of the web site.
+geolocation2.wantsTo=Partejar vòstra localizacion amb %S ?
 
 geolocation.learnMore=Ne saber mai…
 
@@ -90,15 +118,18 @@ typeWarning=Avertiment :
 
 # Offline web applications
 offlineApps.allow=Autorizar
+offlineApps.wantsTo=%S vòl emmagazinar de donadas sus vòstre aparelh per un usatge fòra connexion.
 
 # IndexedDB Quota increases
 indexedDBQuota.allow=Autorizar
+indexedDBQuota.wantsTo=%S vòl emmagazinar fòrça donadas sus vòstre aparelh per un usatge fòra connexion.
 
 tabs.emptyTabTitle=Onglet novèl
 
 # Open Search
 # LOCALIZATION NOTE (opensearch.search.header): %S is the word or phrase
 # typed by the user in the urlbar to search
+opensearch.search.header=Recercar « %S » amb :
 
 # Check for Updates in the About Panel - button labels and accesskeys
 # LOCALIZATION NOTE - all of the following update buttons labels will only be
