--- a/browser/pdfviewer/chrome.properties
+++ b/browser/pdfviewer/chrome.properties
@@ -14,5 +14,6 @@
 
 # Chrome notification bar messages and buttons
 unsupported_feature=Es possible qu'aqueste document PDF s'afiche pas corrèctament.
+unsupported_feature_forms=Aqueste document PDF conten de formularis. L'emplenatge de camps de formularis es pas pres en carga.
 open_with_different_viewer=Dobrir amb un autre lector PDF
 open_with_different_viewer.accessKey=o
