--- a/browser/pdfviewer/viewer.properties
+++ b/browser/pdfviewer/viewer.properties
@@ -57,12 +57,24 @@ page_rotate_ccw.title=Rotacion antiorària
 page_rotate_ccw.label=Rotacion antiorària
 page_rotate_ccw_label=Rotacion antiorària
 
+hand_tool_enable.title=Activar l'aisina man
+hand_tool_enable_label=Activar l'aisina man
+hand_tool_disable.title=Desactivar l'aisina man
 
 # Document properties dialog box
 document_properties_file_name=Nom del fichièr :
+document_properties_file_size=Talha del fichièr :
+document_properties_kb={{size_kb}} Ko ({{size_b}} octets)
+document_properties_mb={{size_mb}} Mo ({{size_b}} octets)
 document_properties_title=Títol :
+document_properties_author=Autor :
 document_properties_subject=Subjècte :
 document_properties_keywords=Mots claus :
+document_properties_creation_date=Data de creacion :
+document_properties_modification_date=Data de modificacion :
+document_properties_date_string={{date}}, {{time}}
+document_properties_creator=Creator :
+document_properties_producer=Aisina de conversion PDF :
 document_properties_close=Tampar
 
 # Tooltips and alt text for side panel toolbar buttons
