--- a/dom/chrome/accessibility/AccessFu.properties
+++ b/dom/chrome/accessibility/AccessFu.properties
@@ -101,7 +101,7 @@ complementary  =       complementari
 contentinfo    =       infos contengut
 main           =       principal
 navigation     =       navigacion
-search         =       &brandShortName; manda de rapòrts de plantatge per ajudar &vendorShortName; a rendre vòstre navigador mai estable e securizat
+search         =       recercar
 
 # Description of a table or grid:
 # 1 is a dynamically retrieved localized role of either 'table' or 'grid'.
@@ -190,7 +190,7 @@ imagemapAbbr       =       imgmap
 figureAbbr         =       fig
 textareaAbbr       =       zòna de tèxte
 tableAbbr          =       tbl
-tableInfoAbbr = zòna de tèxte
+tableInfoAbbr = %S %S %S
 # LOCALIZATION NOTE (tableColumnInfoAbbr): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 tableColumnInfoAbbr = #1c;#1c
