--- a/dom/chrome/security/csp.properties
+++ b/dom/chrome/security/csp.properties
@@ -5,9 +5,11 @@
 # CSP Warnings:
 # LOCALIZATION NOTE (CSPViolation):
 # %1$S is the reason why the resource has not been loaded.
+CSPViolation = Los paramètres de la pagina an empachat lo cargament d'una ressorsa : %1$S
 # LOCALIZATION NOTE (CSPViolationWithURI):
 # %1$S is the directive that has been violated.
 # %2$S is the URI of the resource which violated the directive.
+CSPViolationWithURI = Los paramètres de la pagina an empachat lo cargament d'una ressorsa a %2$S (« %1$S »).
 # LOCALIZATION NOTE (triedToSendReport):
 # %1$S is the URI we attempted to send a report to.
 triedToSendReport = A ensajat de mandar un rapòrt a una URI invalida : "%1$S"
@@ -22,8 +24,10 @@ couldNotParseReportURI = a pas pogut analisar lo rapòrt URI : %1$S
 couldNotProcessUnknownDirective = A pas pogut tractar la directiva desconeguda '%1$S'
 # LOCALIZATION NOTE (ignoringUnknownOption):
 # %1$S is the option that could not be understood
+ignoringUnknownOption = L'opcion desconeguda « %1$S » es estada ignorada.
 # LOCALIZATION NOTE (reportURInotHttpsOrHttp2):
 # %1$S is the ETLD of the report URI that is not HTTP or HTTPS
+reportURInotHttpsOrHttp2 = L'URI del rapòrt (%1$S) deu èsser de tipe HTTP o HTTPS.
 # LOCALIZATION NOTE (pageCannotSendReportsTo):
 # %1$S is the URI of the page with the policy
 # %2$S is the report URI that could not be used
@@ -41,10 +45,13 @@ reportPostRedirect = Lo mandadís del rapòrt de violacion a %1$S a fracassat, p
 allowDirectiveIsDeprecated = la directiva « allow » es obsoleta, utilizatz la directiva equivalenta « default-source » a la plaça
 # LOCALIZATION NOTE (inlineScriptBlocked):
 # inline script refers to JavaScript code that is embedded into the HTML document.
+inlineScriptBlocked = Una temptativa d'execucion d'escripts embarcats es estada blocada
 # LOCALIZATION NOTE (inlineStyleBlocked):
 # inline style refers to CSS code that is embedded into the HTML document.
+inlineStyleBlocked = Una temptativa d'aplicacion de fuèlhs d'estil embarcats es estada blocada
 # LOCALIZATION NOTE (scriptFromStringBlocked):
 # eval is a name and should not be localized.
+scriptFromStringBlocked = Una temptativa d'apèl JavaScript dempuèi una cadena de caractèrs (en apelant una foncion coma « eval ») es estada blocada
 # LOCALIZATION NOTE (hostNameMightBeKeyword):
 # %1$S is the hostname in question and %2$S is the keyword
 
