--- a/dom/chrome/security/security.properties
+++ b/dom/chrome/security/security.properties
@@ -1,5 +1,7 @@
 # Mixed Content Blocker
 # LOCALIZATION NOTE: "%1$S" is the URI of the blocked mixed content resource
+BlockMixedDisplayContent = Blocatge del cargament del contengut mixte pas actiu (mixed display content) « %1$S »
+BlockMixedActiveContent = Blocatge del cargament del contengut mixte actiu (mixed active content) « %1$S »
 
 # CSP
 ReportOnlyCSPIgnored=La politica CSP « report-only » serà ignorada perque d'autras politicas CSP « non-report-only » son aplicadas.
@@ -11,3 +13,5 @@ BothCSPHeadersPresent=Aqueste site a especificat a l'encòp una entèsta « X-C
 # CORS
 
 # LOCALIZATION NOTE: Do not translate "Strict-Transport-Security" or "HSTS"
+LoadingMixedActiveContent=Cargament de contengut mixte actiu (pas securizat) sus una pagina securizada « %1$S »
+LoadingMixedDisplayContent=Cargament de contengut mixte non actiu (pas securizat) sus una pagina securizada « %1$S »
