--- a/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -46,6 +46,7 @@ downloadsCompleteMsg=Totes los telecargaments son acabats
 
 # LOCALIZATION NOTE (infiniteRate):
 # If download speed is a JavaScript Infinity value, this phrase is used
+infiniteRate=Fòrça rapid
 
 # LOCALIZATION NOTE (statusFormat3): — is the "em dash" (long dash)
 # %1$S transfer progress; %2$S rate number; %3$S rate unit; %4$S time left
@@ -123,7 +124,7 @@ fileDoesNotExistOpenTitle=Impossible de dobrir %S
 fileDoesNotExistShowTitle=Impossible d'afichar %S
 fileDoesNotExistError=%S existís pas. Benlèu es estat renomenat, desplaçat o escafat dempuèi qu'es estat telecargat.
 
-chooseAppFilePickerTitle=%S existís pas. Benlèu qu'es estat renomenat, desplaçat o escafat dempuèi qu'es estat telecargat.
+chooseAppFilePickerTitle=Dobrir amb…
 
 # LOCALIZATION NOTE (downloadsTitleFiles, downloadsTitlePercent): Semi-colon list of
 # plural forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
