--- a/webapprt/webapprt/overrides/appstrings.properties
+++ b/webapprt/webapprt/overrides/appstrings.properties
@@ -2,4 +2,6 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+netReset=La connexion amb lo servidor es estada reïnicializada pendent lo cargament de la pagina.
 confirmRepostPrompt=Per contunhar, las informacions transmesas precedentament per l'aplicacion devon èsser renviadas. Aquò repetirà tota accion (tala coma una recèrca o un òrdre de crompa) entrepresa precedentament.
+unknownSocketType=L'aplicacion sap pas cossí entrar en contacte amb lo servidor.
