--- a/webapprt/webapprt/overrides/dom.properties
+++ b/webapprt/webapprt/overrides/dom.properties
@@ -132,3 +132,4 @@ UseOfReleaseEventsWarning=L'utilizacion de la foncion « releaseEvents() » es
 UseOfDOM3LoadMethodWarning=L'utilizacion de Document.load() es obsolèta. Per metre a jorn vòstre còde, utilizatz l'objècte DOM XMLHttpRequest. Consultar https://developer.mozilla.org/en/XMLHttpRequest per mai d'informacions
 # LOCALIZATION NOTE: Do not translate "window.showModalDialog()" or "window.open()" 
 # LOCALIZATION NOTE: Do not translate "window._content" or "window.content"
+Window_ContentWarning=« window._content » es obsolèt. Utilizatz « window.content » a la plaça.
