--- a/browser/chrome/browser/preferences/preferences.properties
+++ b/browser/chrome/browser/preferences/preferences.properties
@@ -124,6 +124,7 @@ actualAppCacheSize=L'escondedor d'aplicacions utiliza actualament %1$S %2$S d'es
 
 ###Preferences::Advanced::Update
 #LOCALIZATION NOTE: The next string is for updating in Windows 8 only instead of updateAuto1.label.  %S = brandShortName
+updateAutoDesktop.label=Installar automaticament las mesas a jorn de %S del Burèu
 updateAutoDesktop.accessKey=A
 
 syncUnlink.title=Volètz levar aqueste aparelh ?
@@ -136,4 +137,7 @@ featureDisableRequiresRestart=%S deu reaviar per activar aquesta foncionalitat.
 shouldRestartTitle=Tornar aviar %S
 
 ###Preferences::Sync::Firefox Accounts
+firefoxAccountsVerificationSentTitle=Ligam de verificacion mandat
 # LOCALIZATION NOTE: %S = user's email address.
+firefoxAccountsVerificationSentHeading=Un ligam de verificacion es estat mandat a %S
+firefoxAccountVerificationSentDescription=Consultatz vòstres messatges e clicar sul ligam per aviar la sincronizacion.
