--- a/browser/chrome/browser/syncSetup.properties
+++ b/browser/chrome/browser/syncSetup.properties
@@ -56,6 +56,10 @@ disconnect.verify.title = Desconnectar
 disconnect.verify.heading = Sètz segur ?
 # LOCALIZATION NOTE (disconnect.verify.description): %S will be replaced with
 # brandShortName
+disconnect.verify.description = %S se sincronizarà pas mai amb vòstre compte, pasmens, cap de vòstras donadas de navigacion que se tròban sus aquesta ordenator serà pas suprimida.
 
+relinkVerify.title = Avertiment de fusion
+relinkVerify.heading = Sètz segur que vos volètz connectar a Sync ?
 # LOCALIZATION NOTE (relinkVerify.description): Email address of a user previously signed into sync.
 
+manage.pageTitle = Gerir Sync
