--- a/browser/metro/chrome/config.properties
+++ b/browser/metro/chrome/config.properties
@@ -2,6 +2,9 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+newPref.createButton=Crear
+newPref.privateButton=Privat
 newPref.changeButton=Cambiar
 
 pref.toggleButton=Intervertir
+pref.resetButton=Reïnicializar
