--- a/dom/chrome/layout/HtmlForm.properties
+++ b/dom/chrome/layout/HtmlForm.properties
@@ -19,11 +19,15 @@ CannotEncodeAllUnicode=Un formulari es estat somés amb l'encodatge de caractèr
 AllSupportedTypes=Totes los tipes suportats
 # LOCALIZATION NOTE (NoFileSelected): this string is shown on a
 # <input type='file'> when there is no file selected yet.
+NoFileSelected=Cap de fichièr pas seleccionat
 # LOCALIZATION NOTE (NoFilesSelected): this string is shown on a
 # <input type='file' multiple> when there is no file selected yet.
+NoFilesSelected=Cap de fichièr pas seleccionat.
 # LOCALIZATION NOTE (XFilesSelected): this string is shown on a
 # <input type='file' multiple> when there are more than one selected file.
 # %S will be a number greater or equal to 2.
+XFilesSelected=%S fichièrs seleccionats.
+ColorPicker=Causissètz una color
 # LOCALIZATION NOTE (AndNMoreFiles): Semi-colon list of plural forms. 
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals 
 # This string is shown at the end of the tooltip text for <input type='file'
