--- a/toolkit/chrome/global/charsetMenu.properties
+++ b/toolkit/chrome/global/charsetMenu.properties
@@ -35,6 +35,7 @@ charsetMenuAutodet.off = (desactivada)
 charsetMenuAutodet.ja = Japonés
 charsetMenuAutodet.ru = Rus
 charsetMenuAutodet.uk = Ucraïnian
+charsetMenuAutodet.uk.key = U
 
 # Globally-relevant
 UTF-8.key        = U
@@ -61,6 +62,7 @@ ISO-8859-2       = Euròpa centrala (ISO)
 # Chinese, Simplified
 # LOCALIZATION NOTE (gbk.bis.key):
 # gbk.bis.key never appears together with gbk.key and, hence, can be the same.
+gbk.bis.key      =          S
 gbk.bis          = Chinés, Simplificat
 # The strings gbk.key, gbk and gb18030 are no longer used but are retained
 # in order to enable backout after string freeze, just in case.
@@ -87,6 +89,7 @@ ISO-8859-7.key   =          O
 ISO-8859-7       = Grèc (ISO)
 
 # Hebrew
+windows-1255.key = H
 windows-1255     = Ebrieu
 # LOCALIZATION NOTE (ISO-8859-8): The value for this item should begin with
 # the same word for Hebrew as the value for windows-1255 so that this item 
