--- a/toolkit/chrome/global/devtools/styleinspector.properties
+++ b/toolkit/chrome/global/devtools/styleinspector.properties
@@ -64,6 +64,7 @@ ruleView.contextmenu.selectAll=Seleccionar tot
 
 # LOCALIZATION NOTE (ruleView.contextmenu.selectAll.accessKey): Access key for
 # the rule view context menu "Select all" entry.
+ruleView.contextmenu.selectAll.accessKey=A
 
 # LOCALIZATION NOTE (ruleView.contextmenu.copy): Text displayed in the rule view
 # context menu.
@@ -71,6 +72,7 @@ ruleView.contextmenu.copy=Copiar
 
 # LOCALIZATION NOTE (ruleView.contextmenu.copy.accessKey): Access key for
 # the rule view context menu "Select all" entry.
+ruleView.contextmenu.copy.accessKey=C
 
 # LOCALIZATION NOTE (ruleView.contextmenu.showOrigSources): Text displayed in the rule view
 # context menu.
@@ -78,6 +80,7 @@ ruleView.contextmenu.showOrigSources=Afichar las fonts originalas
 
 # LOCALIZATION NOTE (ruleView.contextmenu.showOrigSources.accessKey): Access key for
 # the rule view context menu "Show original sources" entry.
+ruleView.contextmenu.showOrigSources.accessKey=O
 
 # LOCALIZATION NOTE (ruleView.contextmenu.showCSSSources): Text displayed in the rule view
 # context menu.
@@ -85,6 +88,7 @@ ruleView.contextmenu.showCSSSources=Afichar las fonts CSS
 
 # LOCALIZATION NOTE (ruleView.contextmenu.showCSSSources.accessKey): Access key for
 # the rule view context menu "Show CSS sources" entry.
+ruleView.contextmenu.showCSSSources.accessKey=S
 
 # LOCALIZATION NOTE (computedView.contextmenu.selectAll): Text displayed in the
 # computed view context menu.
@@ -92,6 +96,7 @@ computedView.contextmenu.selectAll=Seleccionar tot
 
 # LOCALIZATION NOTE (computedView.contextmenu.selectAll.accessKey): Access key for
 # the computed view context menu "Select all" entry.
+computedView.contextmenu.selectAll.accessKey=A
 
 # LOCALIZATION NOTE (computedView.contextmenu.copy): Text displayed in the
 # computed view context menu.
@@ -99,3 +104,4 @@ computedView.contextmenu.copy=Copiar
 
 # LOCALIZATION NOTE (computedView.contextmenu.copy.accessKey): Access key for
 # the computed view context menu "Select all" entry.
+computedView.contextmenu.copy.accessKey=C
