--- a/webapprt/webapprt/webapp.properties
+++ b/webapprt/webapprt/webapp.properties
@@ -26,6 +26,8 @@ geolocation.remember=Se remembrar d'aquela causida
 
 # LOCALIZATION NOTE (desktop-notification.title): %S will be replaced with the
 # name of the webapp.
+desktop-notification.title=%S - Afichar las notificacions
+desktop-notification.description=Volètz autorizar las notificacions ?
 desktop-notification.allow=Afichar
 desktop-notification.deny=Afichar pas
 desktop-notification.remember=Se remembrar d'aquela causida
@@ -40,3 +42,4 @@ webapps.install.install=Installar ara
 webapps.install.dontinstall=Installar pas
 
 paymentDialog.title=Pagament
+paymentDialog.message=Quin prestatari de pagament volètz utilizar ?
